# sonic-otn-libs

./: README.md
debs/: libhal-otn-kvm-1.1.0-amd64.deb  libhalplatformclient-otn-1.0.0-amd64.deb  libsai-otn-1.1.0-amd64.deb  libsai-otn-1.2.0-amd64.deb
platform/: HalApi.thrift  HalPlatformApi.thrift  README.md  build.sh
platform/HalApiClient/: ApiImplement.cpp  CMakeLists.txt  Client.h  ClientTest.cpp  pack.sh
platform/HalApiClient/doc/: changelog
platform/HalApiServer/: ApiHelper.cpp  ApiHelper.h  CMakeLists.txt  Convert.h  HalApi.cpp  HalApi.h  HalApiData.h  HalApiTest.cpp  HalApi_server.cpp  HalApi_types.cpp  HalApi_types.h
platform/HalPackage/: CMakeLists.txt  pack.sh
platform/HalPackage/doc/: changelog
platform/HalPlatformApiClient/: pack.sh  setup.py
platform/HalPlatformApiClient/HalPlatformApi/: HalPlatformApi-remote  HalPlatformApi.py  __init__.py  client.py
platform/HalPlatformApiServer/: ApiHelper.cpp  ApiHelper.h  CMakeLists.txt  Convert.cpp  Convert.h  Format.h  HalPlatformApi.cpp  HalPlatformApi.h  HalPlatformApiTest.cpp  HalPlatformApi_server.cpp  HalPlatformApi_types.h  HalPlatformData.h  logger.cpp  logger.h  virtual_device.h  virtual_platform.h
platform/test/: HalApiThriftTrans.py  HalPlatformApiTest.py  plaform.json
sai/: CMakeLists.txt  README.md
sai/inc/: dev_data.h  dev_util.h  sai_adapter.h  sai_adapter_interface.h  sai_meta_data.h  virtual_otn_dev_mgr.h  virtual_otn_device.h
sai/src/: dev_util.cpp  sai.c  sai_adapter.cpp  sai_adapter_interface.cpp  sai_meta_data.cpp  sai_otn_attenuator.cpp  sai_otn_device.cpp  sai_otn_oa.cpp  sai_otn_ocm.cpp  sai_otn_osc.cpp  sai_otn_otdr.cpp  sai_otn_wss.cpp  sai_switch.cpp  virtual_otn_dev_mgr.cpp  virtual_otn_device.cpp
sai/test/: test.cpp
